# base

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: cmake-single-platform.yml
cmake/: build_option.cmake  compile_setting.cmake  install.cmake
docs/: README_8md.html  annotated_dup.js  base_8hpp.html  base_8hpp.js  doxygen_crawl.html  functions.html  functions_func.html  index.html  namespacekotucode.html  namespacekotucode.js  namespacekotucode_1_1base_1_1alphabet.js  namespacekotucode_1_1base_1_1base62.html  namespacemembers_func.html  namespaces.html  namespaces_dup.js  navtreeindex0.js  structkotucode_1_1base_1_1alphabet_1_1base62.html  structkotucode_1_1base_1_1alphabet_1_1base64-members.html  structkotucode_1_1base_1_1alphabet_1_1base64.html  structkotucode_1_1base_1_1alphabet_1_1base64.js  structkotucode_1_1base_1_1alphabet_1_1base64url-members.html  structkotucode_1_1base_1_1alphabet_1_1base64url.js
docs/html/: annotated.html  base_8hpp.html  base_8hpp_source.html  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen_crawl.html  files.html  functions.html  functions_func.html  index.html  menudata.js  namespacekotucode.html  namespacekotucode_1_1base.html  namespacekotucode_1_1base.js  namespacekotucode_1_1base_1_1alphabet.html  namespacekotucode_1_1base_1_1base62.html  namespacekotucode_1_1base_1_1base64.html  namespacemembers.html  namespacemembers_func.html  namespaces.html  navtreedata.js  navtreeindex0.js  (+7 more)
docs/search/: all_3.js  (+13 more)
include/: base.hpp
src/: CMakeLists.txt
test/: CMakeLists.txt  test.cpp  test1.cpp  test_base62.cpp  test_base64.cpp
(+12 files in other folders)
